--- a/No.2.2.4.html
+++ b/No.2.2.4.html
@@ -272,8 +272,35 @@
                             <BR>
                             <BR>
                             <BR>
+                            <br>
+                            <br>
+                            <br>
                             <p><img class="imagen-zigzag" src="images/drive-download-20250414T215442Z-001/top-view-dark-laptop-background-template-ok.png" alt="" width="340" height="250" /></p>
-
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="entorno1.webp" alt="" width="340" height="250" /></p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="entorno2.webp" alt="" width="340" height="250" /></p>
+                           <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="entorno3.gif" alt="" width="340" height="250" /></p>
+                            
                         </li>
                     </ul>
                 </div>
@@ -295,13 +322,33 @@
                                 <br><br>
                                 <h5>Reduce errores: </h5>Las herramientas de depuración y los sistemas de control de versiones ayudan a identificar y corregir errores de manera temprana.
                                 <br><br>
-                                <h5>Estandariza procesos: </h5>Un entorno bien definido asegura que todos los miembros del equipo sigan las mismas prácticas y convenciones.
+                                <h5>Estandariza procesos: </h5>Un entorno bien definido asegura que todos los miembros del equipo sigan las mismas prácticas y convenciones.                        
                             </p>
-                        </li>
-                        <li>
                             <p>
-
-
+                              <h4>Tipos de Entornos de Desarrollo</h4>
+                                Dependiendo del lenguaje de programación o del tipo de proyecto, existen diferentes tipos de entornos de desarrollo. 
+                                Algunos son específicos para un lenguaje (como Java o Python), mientras que otros son más generales.
+                                <h5>1. IDEs para Programación General</h5>
+                                Estos IDEs son versátiles y permiten trabajar con una variedad de lenguajes de programación. Muchos de ellos cuentan con 
+                                soporte para múltiples lenguajes, extensiones y herramientas integradas.
+                                <h5>Ejemplos:</h5>
+                                <h5>Visual Studio Code (VS Code):</h5> Es uno de los IDEs más populares, desarrollado por Microsoft. Es gratuito, altamente 
+                                personalizable, y tiene soporte para lenguajes como JavaScript, Python, C++, Java, PHP, y muchos más. Además, soporta una
+                                gran cantidad de extensiones que pueden hacer que el desarrollo sea aún más eficiente.
+                                <h5>Sublime Text:</h5> Es un editor de texto avanzado que, aunque no es un IDE completo, se puede configurar para que funcione 
+                                como un entorno de desarrollo completo mediante complementos. Es rápido, minimalista y soporta muchos lenguajes de programación.
+                                <h5>Atom:</h5> Desarrollado por GitHub, es un editor de código fuente que también se puede convertir en un entorno de desarrollo
+                                completo gracias a su extensibilidad. Tiene soporte para JavaScript, HTML, CSS, y otros lenguajes de programación.
+                            </p>
+                            <p>
+                                <h4>IDEs para Lenguajes Específicos</h4>
+                                Algunos entornos están diseñados específicamente para un solo lenguaje de programación. Estos entornos están optimizados para trabajar con características particulares de ese lenguaje, como sintaxis, depuración y bibliotecas específicas.
+                                <h5>Ejemplos:</h5>
+                                <h5>PyCharm:</h5> IDE especializado para el lenguaje Python. Es muy popular en el desarrollo de aplicaciones web y de ciencia de datos. Ofrece soporte avanzado para bibliotecas como Django, Flask, y TensorFlow.
+                                <h5>IntelliJ IDEA:</h5> Un IDE orientado a Java y otros lenguajes como Kotlin, Groovy y Scala. Es muy utilizado en el desarrollo de aplicaciones de grandes empresas, especialmente en plataformas Android o aplicaciones de back-end.
+                                <h5>Xcode:</h5> IDE desarrollado por Apple para crear aplicaciones iOS, macOS, watchOS y tvOS. Está optimizado para trabajar con Swift y Objective-C, los lenguajes de programación nativos de Apple.
+                                <h5>Android Studio:</h5> IDE oficial para el desarrollo de aplicaciones Android, basado en IntelliJ IDEA. Proporciona herramientas especializadas para la creación de aplicaciones móviles Android, incluyendo emuladores, depuración y análisis de rendimiento.
+                                <h5>RubyMine:</h5> IDE de JetBrains especializado en el lenguaje Ruby. Viene con muchas características que facilitan el desarrollo de aplicaciones web en Ruby on Rails.
                             </p>
                         </li>
                     </ul>
