--- a/No.3.1.html
+++ b/No.3.1.html
@@ -231,6 +231,15 @@ transform-style: preserve-3d;}
                         <div class="col-md-6">
                           
                             <p><img class="imagen-zoom-rotar" src="images/educacion2.webp" alt="" width="340" height="250" /></p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zoom-rotar" src="entonro3.gif" alt="" width="340" height="250" /></p>
+                          
                         </div>
                         <div class="col-md-6">
                             <p>
