--- a/No.3.1.html
+++ b/No.3.1.html
@@ -238,7 +238,7 @@ transform-style: preserve-3d;}
                             <br>
                             <br>
                             <br>
-                            <p><img class="imagen-zoom-rotar" src="entonro3.gif" alt="" width="340" height="250" /></p>
+                            <p><img class="imagen-zoom-rotar" src="entorno3.gif" alt="" width="340" height="250" /></p>
                           
                         </div>
                         <div class="col-md-6">
