--- a/No.3.1.html
+++ b/No.3.1.html
@@ -239,6 +239,11 @@ transform-style: preserve-3d;}
                             <br>
                             <br>
                             <p><img class="imagen-zoom-rotar" src="entorno3.gif" alt="" width="340" height="250" /></p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zoom-rotar" src="cms1.gif" alt="" width="340" height="250" /></p>
                           
                         </div>
                         <div class="col-md-6">
