--- a/No.3.1.1.html
+++ b/No.3.1.1.html
@@ -238,10 +238,18 @@
                             <BR>
                             <BR>
                             <BR>
+                            <br>
+                            <br>
                             <BR>
                             <p><img class="imagen-zigzag" src="images/Nego5.jpg" alt="" width="340" height="250" /></p>
                             <BR>
-
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="3.4.3.jpg" alt="" width="340" height="250" /></p>
+                            
                         </li>
                     </ul>
                 </div>
@@ -288,11 +296,52 @@
                                 5. Descripción de la acción y la interacción:
                                 <br>
                             </p>                                          
+                              <p>
+                                <h4>Objetivos del Guion Gráfico en Aplicaciones Multimedia</h4>
+                                <h5>Visualización del Flujo de la Aplicación:</h5> El guion gráfico permite ver cómo fluye la interacción de un usuario con la aplicación. 
+                                Esto incluye cómo se mueven entre las diferentes pantallas y cómo se presentan los elementos multimedia (imágenes, texto, video, etc.).
+                                <h5>Planificación de Interacciones y Animaciones:</h5> Sirve para planificar cómo los elementos interactivos de la aplicación se comportarán 
+                                durante la interacción, como animaciones, transiciones de pantalla, o la respuesta de los botones.
+                                <h5>Clarificación de la Narrativa y la Experiencia del Usuario (UX):</h5> En aplicaciones con componentes narrativos (por ejemplo, juegos
+                                o aplicaciones educativas), el guion gráfico ayuda a planificar el desarrollo de la historia y cómo el usuario se embarca en una 
+                                experiencia interactiva a través de diferentes escenas.
+                                <h5>Facilitación de la Comunicación en el Equipo de Desarrollo:</h5> Un storyboard visualiza los elementos de la interfaz y los procesos de 
+                                interacción de manera que todos los miembros del equipo, incluso aquellos sin experiencia técnica, pueden entender la idea general de la aplicación.
+                              </p>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
+      <!--contenido con imagen lateral izquierdo -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xl-10">
+                    <div class="row row-30">
+                        <div class="col-md-6">
+                            <p><img class="imagen-zoom-rotar" src="analisi1.webp" alt="" width="340" height="250" /></p>
+                        </div>
+                        <div class="col-md-6">
+                            <p>
+                                <h4>Proceso de Creación de un Guion Gráfico para una Aplicación Multimedia</h4>
+                                <h5>Definir el Objetivo y la Audiencia:</h5>
+                                Antes de crear un guion gráfico, es fundamental tener claro el objetivo de la aplicación y quién es el público objetivo. ¿Se trata de una aplicación educativa? ¿Es un juego interactivo? ¿Es una herramienta de entretenimiento?
+                                <h5>Esquematizar el Flujo de Pantallas:</h5>
+                                <h5>Hacer un mapa del flujo de la aplicación:</h5> ¿Cuáles son las pantallas principales? ¿Cómo se conecta una pantalla con la otra? Esto es esencial para mostrar cómo un usuario navegará por la aplicación.
+                                <h5>Dibujar los Cuadros:</h5>
+                                Empezar a crear los cuadros que representarán cada pantalla o interacción importante. Los dibujos no necesitan ser muy detallados, pero deben ser lo suficientemente claros para entender qué sucederá en esa parte de la aplicación.
+                                <h5>Añadir Detalles de Interacción:</h5>
+                                Asegúrate de incluir detalles sobre lo que sucede cuando el usuario interactúa con la aplicación. Esto podría ser clics en botones, movimientos del ratón, gestos en dispositivos táctiles, etc.
+                                <h5>Revisar el Guion Gráfico:</h5>
+                                Revisar cada escena para asegurarse de que todo esté claro y siga una secuencia lógica que sea fácil de entender para los desarrolladores y diseñadores.
+                                Revisar también la experiencia del usuario (UX) para asegurarse de que la navegación sea fluida y lógica.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+      
         <div class="nav-buttons">
             <a href="No.3.1.html"><button class="nav-btn">← Tema anterior</button></a>
             <a href="temarioprueba.html"><button class="nav-btn">📘 Temario</button></a>
