--- a/No.3.1.1.html
+++ b/No.3.1.1.html
@@ -320,6 +320,15 @@
                     <div class="row row-30">
                         <div class="col-md-6">
                             <p><img class="imagen-zoom-rotar" src="analisi1.webp" alt="" width="340" height="250" /></p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-zigzag" src="3.2.jpg" alt="" width="340" height="250" /></p>                            
                         </div>
                         <div class="col-md-6">
                             <p>
