--- a/No.3.1.2.html
+++ b/No.3.1.2.html
@@ -292,10 +292,24 @@
                                   <br><br>
 
                                   <h5>JUSTIFICACIÓN</h5>
-                                  <br><br>
+                                  <br>
                                   Estamos viviendo en un mundo donde los progresos tecnológicos han tenido un crecimiento sorprendente, bajo esta situación el sistema educativo debe poner énfasis
                                   en el desarrollo de habilidades digitales, tanto en los docentes como en los alumnos; ambos deben tener la oportunidad de acceder a nuevos tipos de materiales
                                   educativos, nuevas formas de aprender y de enseñar.
+                              </p>
+                              <p>
+                                <h4>Objetivos de la Aplicación</h4>
+                                Antes de presentar una propuesta gráfica, es crucial entender y justificar cómo esta propuesta ayuda a alcanzar los objetivos principales de la aplicación.
+                                <h5>Identificación del propósito:</h5> ¿Cuál es el objetivo principal de la aplicación? ¿Es educativa, de entretenimiento, de productividad, etc.?
+                                <h5>Ejemplo:</h5> Si se trata de una aplicación educativa, el objetivo podría ser ofrecer un aprendizaje interactivo que mantenga el interés del usuario mediante gráficos atractivos, colores estimulantes y una interfaz amigable.
+                                <h5>Público objetivo:</h5> ¿Quién va a utilizar la aplicación? ¿Niños, adultos, profesionales, estudiantes?
+                              </p>
+                              <p>
+                                <h4>Paleta de Colores</h4>
+                                La elección de los colores en una propuesta gráfica tiene un impacto directo en la psicología del usuario y en su interacción con la aplicación.
+                                <h5>Teoría del color:</h5> Los colores tienen significados y efectos psicológicos. Es importante seleccionar colores que transmitan la emoción o el mensaje que se quiere comunicar.
+                                <h5>Ejemplo:</h5> En una aplicación educativa para niños, los colores primarios (rojo, azul, amarillo) pueden utilizarse para llamar la atención, mientras que colores suaves y relajantes (azul claro, verde menta) pueden utilizarse para áreas donde se desee promover la concentración.
+
                               </p>
                           </li>
 
@@ -304,6 +318,38 @@
               </div>
           </div>
       </div>
+     <!-- Base de imagenes lateral derecha -->
+          <div class="container">
+              <div class="row row-50 flex-lg-row-reverse">
+                  <div class="col-xl-4">
+                      <ul class="list-lg">
+
+                          <li>
+                              <p><img src="images/ubicua1.png" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
+                              <BR>
+                              <BR>
+                              <BR>
+                              <BR>
+                              <p><img class="imagen-hover" src="images/ubicua2.jpg" alt="" width="340" height="250" /></p>
+                          </li>
+                      </ul>
+                  </div>
+                  <!-- contenido lateral derecho -->
+                  <div class="col-xl-8">
+
+                      <ul class="list-xl">
+                          <li>
+                              <h1 class="h1fixed"></h1>
+                              <p>
+                                  <h4>Tipografía</h4>
+                                  La tipografía en una propuesta gráfica debe ser legible y coherente con la identidad visual de la aplicación.
+                                  <h5>Legibilidad y accesibilidad:</h5> Las fuentes deben ser fáciles de leer, incluso en dispositivos con pantallas más pequeñas. Las fuentes deben ser consistentes en todas las pantallas y evitar el uso excesivo de fuentes decorativas.
+                                  <h5>Ejemplo:</h5> Usar tipografía sans-serif para el texto principal, que sea más legible en pantallas digitales, y reservar las fuentes con serifas para títulos o elementos de énfasis.
+                          </p>
+                      </ul>
+                  </div>
+              </div>
+          </div>
       <div class="nav-buttons">
           <a href="No.3.1.1.html"><button class="nav-btn">← Tema anterior</button></a>
           <a href="temarioprueba.html"><button class="nav-btn">📘 Temario</button></a>
