--- a/No.3.2.html
+++ b/No.3.2.html
@@ -278,22 +278,62 @@
                                 el programa, en este caso los códigos presentados en la pantalla del
                                 ordenador, sean comprensibles para el usuario.
                             </p>
-                        </li>
-                        <li>
                             <p>
-
-
+                              <h4>Ejemplos de medios combinados en el diseño multimedia:</h4>
+                              <h5>Texto:</h5> Mensajes, títulos, descripciones, subtítulos.                                                    
+                              <h5>Imágenes:</h5> Fotografías, ilustraciones, gráficos.                                                            
+                              <h5>Audio:</h5> Música, efectos de sonido, locuciones.                                                            
+                              <h5>Video:</h5> Clips visuales, tutoriales, escenas animadas.                                                          
+                              <h5>Animación:</h5> Movimientos gráficos, transiciones entre pantallas.                                                          
+                              <h5>Interactividad:</h5> Elementos como botones, formularios, deslizadores, menús interactivos.
                             </p>
-                            <BR>
-
-                            </BR>
-                            <p>
-
-                            </p>
-
-
-                        </li>
+                        </li>                      
                     </ul>
+                </div>
+            </div>
+        </div>
+       <!--contenido con imagen lateral izquierdo -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xl-10">
+
+                    <div class="row row-30">
+                        <div class="col-md-6">
+                            <br>
+                            <p><img class="imagen-zoom-rotar" src="images/audi3.jpg" alt="" width="340" height="250" /></p>
+                        </div>
+                        <div class="col-md-6">
+                            <br>
+                            <br>
+
+                            <p>
+                                <!--contenido con imagen lateral izquierdo -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xl-10">
+
+                    <div class="row row-30">
+                        <div class="col-md-6">
+                            <br>
+                            <p><img class="imagen-zoom-rotar" src="images/audi3.jpg" alt="" width="340" height="250" /></p>
+                        </div>
+                        <div class="col-md-6">                  
+                            <p>
+                                <h4>Principios del Diseño Multimedia</h4>
+                                El diseño multimedia implica no solo la combinación de medios, sino también la aplicación de ciertos principios de diseño que ayudan a garantizar que el producto final sea efectivo, atractivo y fácil de usar.
+                                <h5>Principios básicos del diseño multimedia:</h5>
+                                <h5>Unidad y Coherencia:</h5>
+                                Todos los elementos gráficos, visuales y de contenido deben seguir una coherencia de estilo. Esto incluye una paleta de colores constante, tipografía adecuada, y la disposición armoniosa de los elementos.
+                                Justificación: La coherencia visual ayuda al usuario a entender el flujo de la información y evita distracciones.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
