--- a/No.3.2.1.html
+++ b/No.3.2.1.html
@@ -199,12 +199,7 @@
                                 proyecto es lineal, pues empieza y corre hasta el final, cuando se da el control de navegación a los
                                 usuarios para que exploren a voluntad el contenido, multimedia se convierte en no – lineal e interactiva,
                                 y es un puente personal muy poderoso hacia la información.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-
-                            </p>
+                            </p>                      
                         </li>
                     </ul>
                 </div>
@@ -275,17 +270,96 @@
                                 acceder a su contenido favorito. Otro reto importante es la privacidad de los usuarios, ya que
                                 muchas aplicaciones recopilan datos personales para ofrecer recomendaciones y anuncios personalizados.
                             </p>
-                        </li>
-                        <li>
-                            <p>
+                           <p>
+                             <h4>1. Identificación del Propósito de la Aplicación</h4>
+                              El primer paso en el diseño de una aplicación multimedia es comprender el propósito principal de la aplicación. 
+                             ¿Qué objetivo se busca alcanzar? ¿Cómo la aplicación ayudará a los usuarios a resolver un problema, aprender algo 
+                             nuevo, o entretenerse? Tener claro el propósito es esencial para dar dirección a las decisiones de diseño y desarrollo.
 
-
-                            </p>
+                           </p>   
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
+       <!--contenido con imagen lateral izquierdo -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xl-10">
+
+                    <div class="row row-30">
+                        <div class="col-md-6">
+                            <br>
+                            <p><img class="imagen-zoom-rotar" src="images/entretenimiento3.avif" alt="" width="340" height="250" /></p>
+                        </div>
+                        <div class="col-md-6">                
+                            <p>
+                                <h5>Educación:</h5> Una aplicación diseñada para enseñar matemáticas a estudiantes de primaria.
+                                <h5>Entretenimiento:</h5> Un juego interactivo donde los usuarios resuelven puzzles para avanzar en niveles.
+                                <h5>Comunicación:</h5> Una plataforma para compartir fotos y videos de manera interactiva entre usuarios.
+                            </p>                                                    
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+       <div class="container">
+            <div class="row row-50 flex-lg-row-reverse">
+                <div class="col-xl-4">
+                    <ul class="list-lg">
+
+                        <li>
+                            <p><img src="images/entretenimiento4.jpg" alt="" class="imagen-animada" width="340" height="250" /></p><BR>
+                            <BR>
+                            <BR>
+                            <br>
+                            <br>
+                            <BR>
+                            <BR>
+                            <br>
+                            <p><img class="imagen-zigzag" src="images/entretenimiento5.webp" alt="" width="340" height="250" /></p>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <p><img class="imagen-animada" src="" alt="" width="340" height="250" /></p>                        
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- contenido lateral derecho -->
+                <div class="col-xl-8">
+
+                    <ul class="list-xl">
+                        <li>
+                            <h1 class="h1fixed"></h1>
+                            <p>
+                                <h4>Análisis del Público Objetivo</h4>
+                                Definir el público objetivo es uno de los elementos clave en el diseño del concepto. Conocer las necesidades, intereses y comportamientos de los usuarios ayuda a crear una experiencia más personalizada y efectiva. Esta etapa incluye responder preguntas como:
+                                <h5>¿Quiénes son los usuarios finales de la aplicación?</h5>
+                                <h5>¿Cuál es su edad, género, nivel educativo, ubicación geográfica y habilidades tecnológicas?</h5>
+                                <h5>¿Qué dispositivos utilizarán? ¿Móviles, tabletas, computadoras?</h5>
+                                <h5>¿Qué les interesa o motiva? ¿Qué problemas o desafíos tienen que la aplicación podría resolver?</h5>
+                           </p>   
+                          <p>
+                            <h4>Definición de Características y Funcionalidades</h4>
+                            Con el propósito y el público objetivo en mente, el siguiente paso es definir las características y funcionalidades clave de la aplicación. Esto implica identificar los elementos esenciales que la aplicación debe tener para cumplir con su propósito y atraer al usuario.
+                            Algunos aspectos a considerar incluyen:
+                            <h5>Interactividad:</h5> ¿La aplicación será interactiva? ¿Qué acciones podrá realizar el usuario (por ejemplo, hacer clic, deslizar, arrastrar)?
+                            <h5>Multimedia:</h5> ¿Qué tipos de medios se incluirán? (Imágenes, videos, audio, animaciones, texto).
+                            <h5>Navegación:</h5> ¿Cómo se desplazará el usuario dentro de la aplicación? (Menú principal, botones de navegación, búsqueda).
+                            <h5>Gamificación:</h5> ¿La aplicación tendrá elementos de juego, como recompensas, puntos o logros?
+                            <h5>Integración social:</h5> ¿La aplicación permitirá compartir contenido en redes sociales?
+                            <h5>Notificaciones:</h5> ¿Habrá alertas o notificaciones para mantener al usuario comprometido?
+                          </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
         <div class="nav-buttons">
             <a href="No.3.2.html"><button class="nav-btn">← Tema anterior</button></a>
             <a href="temarioprueba.html"><button class="nav-btn">📘 Temario</button></a>
