--- a/No.3.2.1.html
+++ b/No.3.2.1.html
@@ -324,7 +324,7 @@
                             <br>
                             <br>
                             <br>
-                            <p><img class="imagen-animada" src="" alt="" width="340" height="250" /></p>                        
+                            <p><img class="imagen-animada" src="dis1.webp" alt="" width="340" height="250" /></p>                        
                         </li>
                     </ul>
                 </div>
