--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   
   </head>
   <style>
+    .swiper-slider {
+    height: 400px !important; /* Puedes ajustar el valor: 300px, 400px, etc. */
+  }
     @keyframes mover {
         0% { transform: translateX(0); }
         50% { transform: translateX(20px); } /* Se mueve a la derecha */
