--- a/No.3.4.html
+++ b/No.3.4.html
@@ -320,22 +320,14 @@
                                 una experiencia fluida.
                                 <h5>•	Mantenimiento:</h5>
                                 La aplicación debe ser mantenida y actualizada para asegurar que funcione correctamente y que siga siendo relevante.
-
-
-
-
                             </p>
-                        </li>
-                        <li>
-                            <p>
 
-
-                            </p>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
+    </div>
         <div class="nav-buttons">
             <a href="No.3.3.3..html"><button class="nav-btn">← Tema anterior</button></a>
             <a href="temarioprueba.html"><button class="nav-btn">📘 Temario</button></a>
