--- a/No.3.3.3.html
+++ b/No.3.3.3.html
@@ -237,6 +237,7 @@
                     </div>
                 </div>
             </div>
+    </div>
             <div class="nav-buttons">
                 <a href="No.3.3.2.html"><button class="nav-btn">← Tema anterior</button></a>
                 <a href="temarioprueba.html"><button class="nav-btn">📘 Temario</button></a>
