--- a/noticias.html
+++ b/noticias.html
@@ -146,12 +146,12 @@
         <h2>Ultimas noticias. </h2>
         <div class="noticias-container">
             <article class="noticia">
-                <img src="Expoisisa.jpg" alt="Noticia 1">
-                <h3>Expo ISISA UPIICSA 2025 </h3>
+                <img src="aviso1.jpg" alt="Noticia 1">
+                <h3>🚨 Gestión Escolar informa 🚨</h3>
                 <p>
-🎉 ¡Queda oficialmente inaugurada la Expo ISISA UPIICSA 2025! 🎉
+
                 </p>
-                <a href="https://www.facebook.com/share/p/14FKLEbevSc/" target="_blank">Leer mas</a>
+                <a href="https://www.facebook.com/share/p/1Gfk17fzU3/" target="_blank">Leer mas</a>
             </article>
             <!--<article class="noticia">
                 <img src="Interpoliescoltas.jpg" alt="Noticia 1">
@@ -181,12 +181,11 @@
 
             </article>
           <article class="noticia">
-                <img src="https://via.placeholder.com/300x200" alt="Noticia 1">
-                <h3>Titulo de noticia 1 </h3>
+                <img src="aviso2.jpg" alt="Noticia 1">
+                <h3>🚨 Tutorias para ETS 🚨 </h3>
                 <p>
-                    Breve descripcion de la noticia 1. 
-                </p>
-                <a href="#">Leer mas</a>
+                 </p>
+                <a href="https://www.facebook.com/share/p/1BrAV6Rnns/">Leer mas</a>
              
             </article>
             <!---Añade mas articulos de noticias según sea necesario-->
@@ -224,11 +223,11 @@
     <section id="galeria">
         <h2>Galeria de Fotos</h2>
         <div class="galeria-container">
-                <img src="https//via.placeholder.com/200x150" alt="Foto 1">
-                <img src="https//via.placeholder.com/200x150" alt="Foto 2">
-                <img src="https//via.placeholder.com/200x150" alt="Foto 3">
-                <img src="https//via.placeholder.com/200x150" alt="Foto 4">
-                <img src="https//via.placeholder.com/200x150" alt="Foto 5">
+                <img src="post1.jpg" alt="Foto 1">
+                <img src="post2.jpg" alt="Foto 2">
+                <img src="post3.jpg" alt="Foto 3">
+                <img src="post4.jpg" alt="Foto 4">
+                <img src="post5.jpeg" alt="Foto 5">
                 <!--Añade mas imagenes según sea necesario-->
          
         </div>
